--- a/Twinkle/View/ContentPages/DisplayControlView.axaml
+++ b/Twinkle/View/ContentPages/DisplayControlView.axaml
@@ -6,6 +6,7 @@
              xmlns:controls="clr-namespace:Twinkle.UI.Controls;assembly=Twinkle.UI"
              xmlns:model="clr-namespace:Twinkle.Model"
              xmlns:local="clr-namespace:Twinkle.View.ContentPages"
+             xmlns:api="clr-namespace:Twinkle.API;assembly=Twinkle.API"
              DataContext="{mvvm:DataContextSource contentPages:DisplayControlViewModel}">
     <Grid ColumnDefinitions="Auto,*">
         <ItemsControl Grid.Column="0"
@@ -18,13 +19,13 @@
                         Spacing="3" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
-            
+
             <ItemsControl.DataTemplates>
                 <DataTemplate DataType="model:LedDisplayModel">
                     <controls:InputModuleSelector HorizontalAlignment="Left"
                                                   VerticalAlignment="Stretch"
                                                   GroupName="Displays"
-                                                  IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                                  IsChecked="{Binding IsSelected, Mode=OneWay}"
                                                   Command="{Binding $parent[local:DisplayControlView].DataContext.InputModuleSelectionChanged}"
                                                   CommandParameter="{Binding}">
                         <TextBlock HorizontalAlignment="Center"
@@ -46,12 +47,53 @@
                     BorderThickness="1"
                     Margin="0,6,6,6"
                     CornerRadius="6">
-                <TextBlock
-                    Text="Please select a module&#x0A; to see available actions"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    TextAlignment="Center"
-                    Opacity="0.5" />
+                <Grid>
+                    <TextBlock
+                        Text="Please select a module&#x0A; to see available actions"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        TextAlignment="Center"
+                        Opacity="{Binding SelectionPromptOpacity}">
+                        <TextBlock.Transitions>
+                            <Transitions>
+                                <DoubleTransition Property="Opacity"
+                                                  Duration="0:0:0.150"
+                                                  Easing="CircularEaseOut" />
+                            </Transitions>
+                        </TextBlock.Transitions>
+                    </TextBlock>
+
+                    <Grid RowDefinitions="Auto,*"
+                          Opacity="{Binding ControlActionListOpacity}">
+                        <ComboBox Grid.Row="0"
+                                  ItemsSource="{Binding AvailablePlugins}"
+                                  SelectedItem="{Binding SelectedDisplay.CurrentPlugin, Mode=TwoWay}"
+                                  Margin="4"
+                                  HorizontalAlignment="Stretch">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate DataType="api:DriverPlugin">
+                                    <TextBlock Text="{Binding Name}" />
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+
+                        <Border Grid.Row="1"
+                                BorderThickness="0,1,0,0"
+                                BorderBrush="{DynamicResource GenericBorderBrush}"
+                                Margin="4,0,4,4" />
+                        
+                        <TransitioningContentControl Grid.Row="1"
+                                                     Margin="0,8,0,0"
+                                                     Content="{Binding SelectedDisplay.CurrentPlugin.View, Mode=TwoWay}">
+                            <TransitioningContentControl.PageTransition>
+                                <CrossFade Duration="0:0:0.150"
+                                           FadeInEasing="CircularEaseIn"
+                                           FadeOutEasing="CircularEaseOut" />
+                            </TransitioningContentControl.PageTransition>
+                        </TransitioningContentControl>
+
+                    </Grid>
+                </Grid>
             </Border>
         </Grid>
     </Grid>
