Stabilize initial plugin system

--- a/Twinkle.TestDriverPlugin/TestDriverPluginView.axaml
+++ b/Twinkle.TestDriverPlugin/TestDriverPluginView.axaml
@@ -1,13 +1,22 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Twinkle.TestDriverPlugin.TestDriverPluginView">
-    <TextBlock HorizontalAlignment="Center"
-               VerticalAlignment="Center">
-        <Run Text="Hello, world!" />
-        <LineBreak />
-        <Run Text="{Binding SomeData}" />
-    </TextBlock>
+    <StackPanel HorizontalAlignment="Stretch">
+        <TextBlock HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   Text="{Binding Display.SerialNumber}" />
+
+        <Grid ColumnDefinitions="*,Auto">
+            <Slider Grid.Column="0"
+                    Minimum="0"
+                    Maximum="34"
+                    Value="{Binding SliderValue}" 
+                    HorizontalAlignment="Stretch"/>
+            
+            <TextBlock Grid.Column="1"
+                       Margin="4,0,0,0"
+                       Text="{Binding SliderValue, StringFormat='Value: {0}'}" 
+                       VerticalAlignment="Center"/>
+        </Grid>
+    </StackPanel>
 </UserControl>
