--- a/Twinkle/View/ContentPages/DisplayControlView.axaml
+++ b/Twinkle/View/ContentPages/DisplayControlView.axaml
@@ -6,7 +6,6 @@
              xmlns:controls="clr-namespace:Twinkle.UI.Controls;assembly=Twinkle.UI"
              xmlns:model="clr-namespace:Twinkle.Model"
              xmlns:local="clr-namespace:Twinkle.View.ContentPages"
-             xmlns:api="clr-namespace:Twinkle.API;assembly=Twinkle.API"
              DataContext="{mvvm:DataContextSource contentPages:DisplayControlViewModel}">
     <Grid ColumnDefinitions="Auto,*">
         <ItemsControl Grid.Column="0"
@@ -67,12 +66,15 @@
                           Opacity="{Binding ControlActionListOpacity}">
                         <ComboBox Grid.Row="0"
                                   ItemsSource="{Binding AvailablePlugins}"
-                                  SelectedItem="{Binding SelectedDisplay.CurrentPlugin, Mode=TwoWay}"
+                                  SelectedItem="{Binding CurrentPluginModel, Mode=TwoWay}"
                                   Margin="4"
-                                  HorizontalAlignment="Stretch">
+                                  HorizontalAlignment="Stretch"
+                                  PlaceholderText="&lt;select a controller plugin&gt;">
                             <ComboBox.ItemTemplate>
-                                <DataTemplate DataType="api:DriverPlugin">
-                                    <TextBlock Text="{Binding Name}" />
+                                <DataTemplate DataType="model:PluginModel">
+                                    <TextBlock>
+                                        <Run Text="{Binding Name}" />
+                                    </TextBlock>
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
                         </ComboBox>
@@ -83,15 +85,14 @@
                                 Margin="4,0,4,4" />
                         
                         <TransitioningContentControl Grid.Row="1"
-                                                     Margin="0,8,0,0"
-                                                     Content="{Binding SelectedDisplay.CurrentPlugin.View, Mode=TwoWay}">
+                                                     Margin="8,12,8,8"
+                                                     Content="{Binding CurrentPluginView, Mode=OneWay}">
                             <TransitioningContentControl.PageTransition>
                                 <CrossFade Duration="0:0:0.150"
                                            FadeInEasing="CircularEaseIn"
                                            FadeOutEasing="CircularEaseOut" />
                             </TransitioningContentControl.PageTransition>
                         </TransitioningContentControl>
-
                     </Grid>
                 </Grid>
             </Border>
