Add a settings system, make developer view toggleable.

--- a/Twinkle/Resources/Styles/Controls/MainViewContextSelector.axaml
+++ b/Twinkle/Resources/Styles/Controls/MainViewContextSelector.axaml
@@ -34,6 +34,7 @@
                 <BrushTransition Property="BorderBrush" Duration="0:0:0.150" />
                 <DoubleTransition Property="MinHeight" Duration="0:0:0.150" />
                 <ThicknessTransition Property="Margin" Duration="0:0:0.150" />
+                <DoubleTransition Property="Opacity" Duration="0:0:0.150" />
             </Transitions>
         </Setter>
     </Style>
