Allow easy switching between display control modes.

--- a/Twinkle/App.axaml
+++ b/Twinkle/App.axaml
@@ -24,5 +24,6 @@
         
         <StyleInclude Source="avares://Twinkle/Resources/Styles/StyleOverrides.axaml" />
         <StyleInclude Source="avares://Twinkle/Resources/Styles/Controls/MainViewContextSelector.axaml" />
+        <StyleInclude Source="avares://Twinkle/Resources/Styles/Controls/DisplayControlModeToggleButton.axaml" />
     </Application.Styles>
 </Application>
